--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -259,6 +259,7 @@ li:hover .plus {
 	color: #393939;
 	margin-bottom: 10px;
 	font-size: 22px;
+  pointer-events: auto;
 }
 
 .articleTitle a {
@@ -286,6 +287,7 @@ li:hover .plus {
 	width: 35px;
 	margin: 12px 9px 0 0;
 	cursor: pointer;
+  z-index: 1;
 }
 
 .likeButton .unclickedTarget {
