Made powered by ml link clickable and transition on hover

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -197,6 +197,12 @@ a {
 .monkeyLearnContainer {
   width: 197px;
   margin: 100px auto 0 auto;
+  opacity: .3;
+  transition: opacity .3s;
+}
+
+.monkeyLearnContainer:hover {
+  opacity: .5;
 }
 
 #poweredBy {
